  'system' that selects the system default trust. Now you just need tls=on to
  use TLS; the other TLS options are only required in special cases.
  To make this work without breaking compatibility with older mpop versions,
  tls_fingerprint now overrides tls_trust_file, and tls_certcheck=off overrides
  both (previously, you could not specify contradicting options).

Version 1.4.1:
- Fixed our TLS code to support TLS 1.3 with GnuTLS.

Version 1.4.0:
- Using OpenSSL is discouraged and may not be supported in the future. Please
  use GnuTLS instead. The reasons are explained here:
  https://marlam.de/mpop/news/openssl-discouraged/
- As using GNU SASL is most likely unnecessary, it is disabled by default now.
  Since everything uses TLS nowadays and thus can use PLAIN authentication, you
  really only need it for GSSAPI.
- If your system requires a library for IDN support, libidn2 is now used instead
  of the older libidn.
- The APOP and CRAM-MD5 authentication method are marked as obsolete / insecure
  and will not be chosen automatically anymore.
- The passwordeval command does not require the password to be terminated by a
  new line character anymore.
- Builtin default port numbers are now used instead of consulting /etc/services.
- Support for DJGPP and for systems lacking vasprintf(), mkstemp(), or tmpfile()
  is removed.

Version 1.2.8:
- Fix support for ~/.config/mpop/config as configuration file
- Add --source-ip option and source_ip command to bind the outgoing connection
  to a specific source IP address.
- Enable SNI for TLS

Version 1.2.7:
- Add support for ~/.config/mpop/config as configuration file
- Add network timeout handling on Windows
- Fix command line handling of SHA256 TLS fingerprints
- Update german translation

Version 1.2.6:
- Return better error code when one or more accounts fail.

Version 1.2.5:
- Support SHA256 fingerprints for tls_fingerprint, and mark both SHA1 and MD5 as
  deprecated.

Version 1.2.4: